Added grid image gallery

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     </header>
     
     <main class="container">
+        <img src="assets/baseball.jpeg" alt="Baseball" width="274px" height="184">
+        <img src="assets/diving.jpeg" alt="Diving" width="274px" height="184">
+        <img src="assets/football.jpeg" alt="Football" width="274px" height="184">
+        <img src="assets/golf.jpg" alt="Golf" width="274px" height="184">
+        <img src="assets/hockey.jpg" alt="Hockey" width="274px" height="184">
+        <img src="assets/racing.jpg" alt="Racing" width="274px" height="184">
+        <img src="assets/swimming.jpeg" alt="Swimming" width="274px" height="184">
+        <img src="assets/tennis.jpg" alt="Tennis" width="274px" height="184">
+        <img src="assets/volleyball.jpeg" alt="Baseball" width="274px" height="184">
     </main>
     
 </body>
